<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="180dp">

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="?selectableItemBackground"
        android:padding="10dp"
        android:src="@drawable/ic_dialog_close" />

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_otherfood_title"
        android:textColor="@color/colorDivider"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/container_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_stufood"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="center"
                android:src="@drawable/ic_stufood"
                card_view:fabSize="mini" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/nav_prefer1"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_lawfood"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="center"
                android:src="@drawable/ic_lawfood"
                card_view:fabSize="mini" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/nav_prefer2"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_stafffood"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="center"
                android:src="@drawable/ic_stafffood"
                card_view:fabSize="mini" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/nav_prefer3"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_dormfood"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="center"
                android:src="@drawable/ic_dormfood"
                card_view:fabSize="mini" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/nav_prefer4"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_chungfood"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="center"
                android:src="@drawable/ic_chungfood"
                card_view:fabSize="mini" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/nav_prefer5"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/container_food"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_feedback"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_feedback"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btn_setting"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/label_setting"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</RelativeLayout>