<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="net.sproutlab.kmufood.activity.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="320dp"
        android:layout_height="411dp"
        android:layout_centerInParent="true"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/msg_main" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/msg_preferpick"
                android:textColor="@color/colorDivider"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/btn_stufood"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="center"
                        android:src="@drawable/ic_stufood"
                        card_view:fabSize="mini" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/nav_prefer1"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/btn_lawfood"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="center"
                        android:src="@drawable/ic_lawfood"
                        card_view:fabSize="mini" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/nav_prefer2"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/btn_stafffood"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="center"
                        android:src="@drawable/ic_stafffood"
                        card_view:fabSize="mini" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/nav_prefer3"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/btn_dormfood"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="center"
                        android:src="@drawable/ic_dormfood"
                        card_view:fabSize="mini" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/nav_prefer4"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/btn_chungfood"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="center"
                        android:src="@drawable/ic_chungfood"
                        card_view:fabSize="mini" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/nav_prefer5"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_feedback"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/label_feedback"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</RelativeLayout>
