<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="128dp">

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="?selectableItemBackground"
        android:padding="10dp"
        android:src="@drawable/ic_dialog_close" />

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_feedback_title"
        android:textColor="@color/colorDivider"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/container_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_contact_email"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="center"
                android:src="@drawable/ic_email"
                card_view:fabSize="mini" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/feedback_c1"
                android:textSize="10sp"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_contact_github"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="center"
                android:src="@drawable/ic_github"
                card_view:fabSize="mini" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/feedback_c2"
                android:textSize="10sp"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>